# petition-damsel

./: CMakeLists.txt  Damsel.vcproj  Info.plist  README  SDLMain.m  VectorStorm.vcproj
Core/: CORE_Game.cpp  CORE_Game.h  CORE_GameMode.cpp  CORE_GameMode.h  CORE_GameRegistry.cpp  CORE_GameRegistry.h  CORE_GameSystem.cpp  CORE_GameSystem.h  CORE_Version.cpp  CORE_Version.h  Core.cpp  Core.h
Damsel.xcodeproj/: project.pbxproj
Data/Asteroids/: Asteroid.vec  Data.vec  MediumAsteroid.vec  PlayerShip.vec  Shot.vec  SmallAsteroid.vec
Data/Damsel/: Car.vec  Credits.txt  Grass.vec  LevelBackground.vec  Pedestrian.vec  Petition.vec  Player.vec  PlayerLeg.vec  RoadMarkings.vec  Splat.vec
Data/Testbed/: Asteroid.vec
English.lproj/: InfoPlist.strings
Files/: FS_File.cpp  FS_File.h  FS_Record.cpp  FS_Record.h
Games/: GM_MainMenu.cpp  GM_MainMenu.h
Games/Asteroids/: AST_Asteroid.cpp  AST_Asteroid.h  AST_Camera.cpp  AST_Camera.h  AST_Game.cpp  AST_Game.h  AST_HowToPlay.cpp  AST_HowToPlay.h  AST_Hud.cpp  AST_Hud.h  AST_ModeGameOver.cpp  AST_ModeGameOver.h  AST_ModeHowTo.cpp  AST_ModeHowTo.h  AST_ModeInGame.cpp  AST_ModeInGame.h  AST_ModeTitleScreen.cpp  AST_ModeTitleScreen.h  AST_PlayerShip.cpp  AST_PlayerShip.h  AST_PlayerShot.cpp  AST_PlayerShot.h  AST_Star.cpp  AST_Star.h
Games/Damsel/: DA_BasicPerson.cpp  DA_BasicPerson.h  DA_Camera.cpp  DA_Camera.h  DA_Car.cpp  DA_Car.h  DA_Cop.cpp  DA_Cop.h  DA_Game.cpp  DA_Game.h  DA_Hud.cpp  DA_Hud.h  DA_LevelBackground.cpp  DA_LevelBackground.h  DA_Pedestrian.cpp  DA_Pedestrian.h  DA_Petition.cpp  DA_Petition.h  DA_PetitionPickup.cpp  DA_PetitionPickup.h  DA_Player.cpp  DA_Player.h  DA_Splat.cpp  DA_Splat.h
Games/Preferences/: PREF_Game.cpp  PREF_Game.h
Games/StarShot/: SST_Fireworks.cpp  SST_Fireworks.h  SST_Game.cpp  SST_Game.h  SST_Hud.cpp  SST_Hud.h  SST_ModeInGame.cpp  SST_ModeInGame.h  SST_Rocket.cpp  SST_Rocket.h  SST_Sequence.cpp  SST_Sequence.h
Games/Testbed/: TB_Game.cpp  TB_Game.h
Memory/: MEM_Heap.cpp  MEM_Heap.h  MEM_Store.cpp  MEM_Store.h
Mix/: MIX_AutomaticInstanceList.h  MIX_Singleton.h  MIX_StrongPointer.h  MIX_StrongPointerTarget.h
Sound/: SND_Music.cpp  SND_Music.h  SND_Sample.cpp  SND_Sample.h  SND_System.cpp  SND_System.h
Systems/: COL_System.cpp  COL_System.h  SYS_Input.cpp  SYS_Input.h  SYS_Timer.cpp  SYS_Timer.h
Systems/Collision/: COL_Object.cpp  COL_Object.h  COL_Sprite.cpp  COL_Sprite.h  PHYS_Emitter.cpp  PHYS_Emitter.h  PHYS_Sprite.cpp  PHYS_Sprite.h
Utils/: UT_Menu.cpp  UT_Menu.h
VS/: VS_Prefix.h  VS_Prefix_Debug.h
VS/Graphics/: VS_Camera.cpp  VS_Camera.h  VS_Color.cpp  VS_Color.h  VS_DisplayList copy.cpp  VS_DisplayList copy.h  VS_DisplayList.cpp  VS_DisplayList.h  VS_Entity.cpp  VS_Entity.h  VS_Font.cpp  VS_Font.h  VS_Layer.cpp  VS_Layer.h  VS_Renderer.cpp  VS_Renderer.h  VS_RendererBloom.cpp  VS_RendererBloom.h  VS_RendererPretty.cpp  VS_RendererPretty.h  VS_RendererSimple.cpp  VS_RendererSimple.h  VS_Screen.cpp  VS_Screen.h  VS_Sprite.cpp  VS_Sprite.h
VS/Math/: VS_Angle.cpp  VS_Angle.h  VS_Math.cpp  VS_Math.h  VS_Random.cpp  VS_Random.h  VS_Transform.cpp  VS_Transform.h  VS_Vector.cpp  VS_Vector.h
VS/Utils/: VS_Debug.cpp  VS_Debug.h  VS_LocalisationTable.cpp  VS_LocalisationTable.h  VS_Log.cpp  VS_Log.h  VS_Preferences.cpp  (+5 more)
VectorStorm.xcodeproj/: project.pbxproj
(+12 files in other folders)
